--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-orbit",
-  "version": "1.0.1",
+  "version": "1.0.7",
   "description": "Orbit (www.orbitdigital.com) rules for eslint",
   "main": "index.js",
   "scripts": {
@@ -22,8 +22,8 @@
     "url": "https://github.com/heyorbit/eslint-config-orbit/issues"
   },
   "homepage": "https://github.com/heyorbit/eslint-config-orbit#readme",
-  "peerDependencies": {
-    "eslint": ">= 4.18.0",
+  "dependencies": {
+    "eslint": ">= 4.19.1",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
