--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-orbit",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Orbit (www.orbitdigital.com) rules for eslint",
   "main": "index.js",
   "scripts": {
@@ -25,9 +25,10 @@
   "dependencies": {
     "eslint": ">= 4.19.1",
     "eslint-config-react-app": "^2.1.0",
-    "eslint-plugin-react": "^7.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-flowtype": "^2.46.3",
     "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-flowtype": "^2.46.3"
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "npm": "^6.0.1"
   }
 }
